# suggest-strand-version

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  pyproject.toml
.github/workflows/: build-docker-image.yml  codeql.yml  python-ci.yml  release.yml
suggest_strand_version/: api.py  cli.py  exceptions.py
tests/: schema.json  test_api.py  test_cli.py
