[tool.poetry]
name = "suggest-strand-version"
version = "0.1.0-beta.0"
description = "A GitHub action that suggests the new semantic version for an updated JSON schema."
authors = ["Marcus Lugg <marcus@octue.com>"]
readme = "README.md"
packages = [{include = "suggest_strand_version"}]

[tool.poetry.scripts]
suggest-strand-version = "suggest_strand_version.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.0"
gql = {version = "^3.5.0", extras = ["requests"]}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
coverage = "^6.5.0"
ruff = "^0.6"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes.
select = ["E", "F"]
# Ignore E501 line-too-long - see https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black for why
ignore = ["E501"]
# Disable fix for unused imports (`F401`) which annoyingly removes your work-in-progress on save
unfixable = ["F401"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
